Tokionight settings changed

--- a/i3/config
+++ b/i3/config
@@ -200,8 +200,7 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-exec_always compton
-
-default_border pixel 1
-default_floating_border pixel 1
+# exec_always compton
+default_border pixel 0
+default_floating_border pixel 0
 
